--- a/HHExplorer/HHExplorer.UWP/HHExplorer.UWP.csproj
+++ b/HHExplorer/HHExplorer.UWP/HHExplorer.UWP.csproj
@@ -18,7 +18,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <AppxBundlePlatforms>x64|arm</AppxBundlePlatforms>
+    <AppxBundlePlatforms>arm</AppxBundlePlatforms>
     <PackageCertificateThumbprint>
     </PackageCertificateThumbprint>
     <PackageCertificateKeyFile>HHExplorer.UWP_TemporaryKey.pfx</PackageCertificateKeyFile>
